Identificador opcional, subcategorias y ABM completo
El identificador de un producto pasa a ser opcional, como dice el enunciado.
Antes era obligatorio y no se podia cargar un producto sin codigo de barras
ni QR, lo que ademas bloqueaba donar ese producto.

Las subcategorias ahora funcionan de verdad como unidad minima de asignacion:
una categoria puede tener varias (Alimentos -> fideos, arroz, legumbres) y el
producto guarda a cual pertenece. Se valida que la subcategoria exista y que
sea de la categoria que se declaro.

Agrego el alta, baja y modificacion que faltaban en productos, categorias e
identificadores. No deja borrar algo que este en uso, y al modificar un
producto se revalida el identificador, porque cambiarle el nombre puede
invalidar un QR.

Saco las referencias a los DTOs de catedra del modelo de dominio. Ahora hay
enums propios y los mappers traducen en la frontera. Aprovecho y muevo la
validacion de cada tipo de identificador al enum, que quedo mas prolijo que
el if que habia.

La aplicacion ya no arranca si falta la URL de Donadores y Entidades o la de
Logistica, que son las dos interacciones que el enunciado pide. Antes
levantaba igual usando fachadas de prueba que aceptaban cualquier donador y no
habia manera de darse cuenta. La de Incentivos queda opcional porque no es una
interaccion que la consigna defina: avisarle al registrar una queja es un
extra nuestro y su cron detecta la perdida de progreso igual. Para trabajar
local sin los otros modulos esta el perfil dev.

Otros cambios:

- GET /donaciones/{id}/historial para consultar la trazabilidad de estados
  sin tener que entrar a la base
- GET /admin/estado con los conteos y el modo de cada integracion
- Codigos HTTP segun el caso: 404, 409, 422 y 502 en vez de 400 para todo.
  Que se caiga Logistica no es culpa del que nos llama
- IDs numericos generados por el componente, con una secuencia persistida
- Valido que la cantidad donada sea mayor a cero
- Actuator limitado a health, info, metrics