@@ -1,42 +1,51 @@
 package ar.edu.utn.dds.k3003;
 
+import ar.edu.utn.dds.k3003.catedra.dtos.donaciones.CategoriaDTO;
 import ar.edu.utn.dds.k3003.catedra.dtos.donaciones.DonacionDTO;
 import ar.edu.utn.dds.k3003.catedra.dtos.donaciones.EstadoDonacionEnum;
 import ar.edu.utn.dds.k3003.catedra.dtos.donaciones.IdentificadorDTO;
 import ar.edu.utn.dds.k3003.catedra.dtos.donaciones.ProductoDTO;
-import ar.edu.utn.dds.k3003.catedra.dtos.donaciones.CategoriaDTO;
 import ar.edu.utn.dds.k3003.catedra.dtos.donadoresYEntidades.DonadorDTO;
 import ar.edu.utn.dds.k3003.catedra.dtos.donadoresYEntidades.QuejaDTO;
 import ar.edu.utn.dds.k3003.catedra.fachadas.FachadaDonaciones;
 import ar.edu.utn.dds.k3003.catedra.fachadas.FachadaDonadoresYEntidades;
 import ar.edu.utn.dds.k3003.catedra.fachadas.FachadaIncentivos;
 import ar.edu.utn.dds.k3003.catedra.fachadas.FachadaLogistica;
+import ar.edu.utn.dds.k3003.exceptions.DonacionRechazadaException;
+import ar.edu.utn.dds.k3003.exceptions.IntegracionException;
+import ar.edu.utn.dds.k3003.exceptions.RecursoEnUsoException;
+import ar.edu.utn.dds.k3003.model.CambioEstadoDonacion;
 import ar.edu.utn.dds.k3003.model.Categoria;
 import ar.edu.utn.dds.k3003.model.Donacion;
+import ar.edu.utn.dds.k3003.model.EstadoDonacion;
 import ar.edu.utn.dds.k3003.model.Identificador;
 import ar.edu.utn.dds.k3003.model.Producto;
 import ar.edu.utn.dds.k3003.repositories.CategoriaMapper;
 import ar.edu.utn.dds.k3003.repositories.CategoriasRepository;
 import ar.edu.utn.dds.k3003.repositories.DonacionesMapper;
 import ar.edu.utn.dds.k3003.repositories.DonacionesRepository;
+import ar.edu.utn.dds.k3003.repositories.GeneradorDeIds;
 import ar.edu.utn.dds.k3003.repositories.IdentificadorMapper;
 import ar.edu.utn.dds.k3003.repositories.IdentificadoresRepository;
 import ar.edu.utn.dds.k3003.repositories.InMemoryCategoriasRepo;
 import ar.edu.utn.dds.k3003.repositories.InMemoryDonacionesRepo;
+import ar.edu.utn.dds.k3003.repositories.InMemoryGeneradorDeIds;
 import ar.edu.utn.dds.k3003.repositories.InMemoryIdentificadoresRepo;
 import ar.edu.utn.dds.k3003.repositories.InMemoryProductosRepo;
 import ar.edu.utn.dds.k3003.repositories.ProductoMapper;
 import ar.edu.utn.dds.k3003.repositories.ProductosRepository;
 import io.micrometer.core.instrument.Counter;
 import io.micrometer.core.instrument.MeterRegistry;
+import io.micrometer.core.instrument.Timer;
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.concurrent.Callable;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.HttpClientErrorException;
 
 @Service
 @Transactional
@@ -50,21 +59,21 @@ public class Fachada implements FachadaDonaciones {
   private final ProductosRepository productosRepository;
   private final IdentificadoresRepository identificadoresRepository;
   private final CategoriasRepository categoriasRepository;
-  private final DonacionesMapper donacionesMapper;
-  private final ProductoMapper productoMapper;
-  private final IdentificadorMapper identificadorMapper;
-  private final CategoriaMapper categoriaMapper;
+  private final GeneradorDeIds generadorDeIds;
+  private final DonacionesMapper donacionesMapper = new DonacionesMapper();
+  private final ProductoMapper productoMapper = new ProductoMapper();
+  private final IdentificadorMapper identificadorMapper = new IdentificadorMapper();
+  private final CategoriaMapper categoriaMapper = new CategoriaMapper();
   private final MeterRegistry meterRegistry;
 
+  /** Constructor sin argumentos: es el que usa el test base de la catedra. */
   public Fachada() {
-    this.donacionesRepository = new InMemoryDonacionesRepo();
-    this.productosRepository = new InMemoryProductosRepo();
-    this.identificadoresRepository = new InMemoryIdentificadoresRepo();
-    this.categoriasRepository = new InMemoryCategoriasRepo();
-    this.donacionesMapper = new DonacionesMapper();
-    this.productoMapper = new ProductoMapper();
-    this.identificadorMapper = new IdentificadorMapper();
-    this.categoriaMapper = new CategoriaMapper();
+    GeneradorDeIds generador = new InMemoryGeneradorDeIds();
+    this.generadorDeIds = generador;
+    this.donacionesRepository = new InMemoryDonacionesRepo(generador);
+    this.productosRepository = new InMemoryProductosRepo(generador);
+    this.identificadoresRepository = new InMemoryIdentificadoresRepo(generador);
+    this.categoriasRepository = new InMemoryCategoriasRepo(generador);
     this.meterRegistry = null;
   }
 
@@ -74,31 +83,31 @@ public class Fachada implements FachadaDonaciones {
       ProductosRepository productosRepository,
       IdentificadoresRepository identificadoresRepository,
       CategoriasRepository categoriasRepository,
+      GeneradorDeIds generadorDeIds,
       MeterRegistry meterRegistry) {
     this.donacionesRepository = donacionesRepository;
     this.productosRepository = productosRepository;
     this.identificadoresRepository = identificadoresRepository;
     this.categoriasRepository = categoriasRepository;
-    this.donacionesMapper = new DonacionesMapper();
-    this.productoMapper = new ProductoMapper();
-    this.identificadorMapper = new IdentificadorMapper();
-    this.categoriaMapper = new CategoriaMapper();
+    this.generadorDeIds = generadorDeIds;
     this.meterRegistry = meterRegistry;
   }
 
   @Override
-  public void setFachadaDonadoresYEntidades(FachadaDonadoresYEntidades fachadaDonadoresYEntidades) {
-    this.fachadaDonadoresYEntidades = fachadaDonadoresYEntidades;
+  public void setFachadaDonadoresYEntidades(FachadaDonadoresYEntidades fachada) {
+    this.fachadaDonadoresYEntidades = fachada;
   }
 
   @Override
-  public void setFachadaLogistica(FachadaLogistica fachadaLogistica) {
-    this.fachadaLogistica = fachadaLogistica;
+  public void setFachadaLogistica(FachadaLogistica fachada) {
+    this.fachadaLogistica = fachada;
   }
 
-  public void setFachadaIncentivos(FachadaIncentivos fachadaIncentivos) {
-    this.fachadaIncentivos = fachadaIncentivos;
+  public void setFachadaIncentivos(FachadaIncentivos fachada) {
+    this.fachadaIncentivos = fachada;
   }
+
+  // ---------------------------------------------------------------- metricas
 
   private void incrementarMetrica(String nombre) {
     if (meterRegistry != null) {
@@ -106,38 +115,53 @@ public class Fachada implements FachadaDonaciones {
     }
   }
 
+  /** Mide latencia ademas de contar: un contador solo no dice si el vecino esta lento. */
+  private <T> T medirIntegracion(String componente, String operacion, Callable<T> llamada) {
+    long inicio = System.nanoTime();
+    try {
+      T resultado = llamada.call();
+      registrarTiempo(componente, operacion, "ok", inicio);
+      return resultado;
+    } catch (HttpClientErrorException.NotFound e) {
+      registrarTiempo(componente, operacion, "not_found", inicio);
+      throw e;
+    } catch (Exception e) {
+      registrarTiempo(componente, operacion, "error", inicio);
+      incrementarMetrica("donatrack.donaciones.integracion." + componente + ".errores");
+      throw new IntegracionException(
+          componente, "Fallo la comunicacion con " + componente + ": " + e.getMessage(), e);
+    }
+  }
+
+  private void registrarTiempo(String componente, String operacion, String resultado, long inicio) {
+    if (meterRegistry != null) {
+      Timer.builder("donatrack.donaciones.integracion.duracion")
+          .tag("componente", componente)
+          .tag("operacion", operacion)
+          .tag("resultado", resultado)
+          .register(meterRegistry)
+          .record(System.nanoTime() - inicio, java.util.concurrent.TimeUnit.NANOSECONDS);
+    }
+  }
+
+  // ------------------------------------------------------------- donaciones
+
   @Override
   public DonacionDTO registrarDonacion(DonacionDTO donacionDTO) {
     if (donacionDTO == null) {
-      throw new RuntimeException("La donacion no puede ser nula");
+      throw new IllegalArgumentException("La donacion no puede ser nula");
+    }
+    if (donacionDTO.cantidad() == null || donacionDTO.cantidad() <= 0) {
+      throw new IllegalArgumentException("La cantidad donada debe ser mayor a cero");
     }
     if (donacionDTO.id() != null && donacionesRepository.findById(donacionDTO.id()).isPresent()) {
-      throw new RuntimeException("La donacion ya existe en el sistema");
+      throw new IllegalArgumentException("La donacion ya existe en el sistema");
     }
     if (productosRepository.findById(donacionDTO.productoID()).isEmpty()) {
-      throw new RuntimeException("El producto indicado no existe");
+      throw new NoSuchElementException("El producto indicado no existe");
     }
 
-    DonadorDTO donador;
-    try {
-      donador = fachadaDonadoresYEntidades.buscarDonadorPorID(donacionDTO.donadorID());
-    } catch (Exception e) {
-      incrementarMetrica("donatrack.donaciones.integracion.donadores.errores");
-      throw new RuntimeException("El donador indicado no existe", e);
-    }
-    if (donador == null) {
-      throw new RuntimeException("El donador indicado no existe");
-    }
-    Boolean puedeDonar;
-    try {
-      puedeDonar = fachadaDonadoresYEntidades.puedeDonar(donacionDTO.donadorID());
-    } catch (Exception e) {
-      incrementarMetrica("donatrack.donaciones.integracion.donadores.errores");
-      throw new RuntimeException("No se pudo validar si el donador puede donar", e);
-    }
-    if (!Boolean.TRUE.equals(puedeDonar)) {
-      throw new RuntimeException("El donador se encuentra baneado o no puede realizar donaciones");
-    }
+    validarQueElDonadorPuedaDonar(donacionDTO.donadorID());
 
     Donacion donacion =
         new Donacion(
@@ -146,35 +170,73 @@ public class Fachada implements FachadaDonaciones {
             donacionDTO.descripcion(),
             donacionDTO.productoID(),
             donacionDTO.cantidad());
+    donacion.setId(generadorDeIds.siguiente("donacion"));
 
     Donacion guardada = donacionesRepository.save(donacion);
 
     if (fachadaLogistica != null) {
-      try {
-        fachadaLogistica.gestionarDonacion(
-            guardada.getDepositoId(),
-            guardada.getId(),
-            guardada.getProductoId(),
-            guardada.getCantidad());
-      } catch (Exception e) {
-        incrementarMetrica("donatrack.donaciones.integracion.logistica.errores");
-        throw new RuntimeException("No se pudo registrar la donacion en Logistica", e);
-      }
+      medirIntegracion(
+          "logistica",
+          "gestionarDonacion",
+          () ->
+              fachadaLogistica.gestionarDonacion(
+                  guardada.getDepositoId(),
+                  guardada.getId(),
+                  guardada.getProductoId(),
+                  guardada.getCantidad()));
     }
 
     incrementarMetrica("donatrack.donaciones.registradas");
     return donacionesMapper.toDTO(guardada);
   }
 
+  /**
+   * Recepcion y rechazo: el donador tiene que existir en Donadores y Entidades y estar habilitado.
+   * Un donador sospechoso solo puede donar la mitad de las veces, por lo que un rechazo aca es un
+   * resultado esperable del negocio y no un error del cliente.
+   */
+  private void validarQueElDonadorPuedaDonar(String donadorID) {
+    if (fachadaDonadoresYEntidades == null) {
+      throw new IntegracionException(
+          "donadores", "No hay integracion configurada con Donadores y Entidades", null);
+    }
+
+    DonadorDTO donador;
+    try {
+      donador =
+          medirIntegracion(
+              "donadores",
+              "buscarDonadorPorID",
+              () -> fachadaDonadoresYEntidades.buscarDonadorPorID(donadorID));
+    } catch (HttpClientErrorException.NotFound | NoSuchElementException e) {
+      throw new DonacionRechazadaException(
+          "El donador " + donadorID + " no esta registrado: la donacion no puede procesarse");
+    }
+    if (donador == null) {
+      throw new DonacionRechazadaException(
+          "El donador " + donadorID + " no esta registrado: la donacion no puede procesarse");
+    }
+
+    Boolean puedeDonar =
+        medirIntegracion(
+            "donadores", "puedeDonar", () -> fachadaDonadoresYEntidades.puedeDonar(donadorID));
+
+    if (!Boolean.TRUE.equals(puedeDonar)) {
+      incrementarMetrica("donatrack.donaciones.rechazadas");
+      throw new DonacionRechazadaException(
+          "El donador " + donadorID + " no se encuentra habilitado para donar");
+    }
+  }
+
   @Override
   public DonacionDTO buscarDonacionPorID(String donacionID) throws NoSuchElementException {
-    Donacion donacion =
-        donacionesRepository
-            .findById(donacionID)
-            .orElseThrow(
-                () -> new NoSuchElementException("No existe una donacion con ese ID"));
+    return donacionesMapper.toDTO(buscarDonacion(donacionID));
+  }
 
-    return donacionesMapper.toDTO(donacion);
+  private Donacion buscarDonacion(String donacionID) {
+    return donacionesRepository
+        .findById(donacionID)
+        .orElseThrow(() -> new NoSuchElementException("No existe una donacion con ese ID"));
   }
 
   public List<DonacionDTO> listarDonaciones() {
@@ -183,15 +245,18 @@ public class Fachada implements FachadaDonaciones {
         .collect(Collectors.toList());
   }
 
+  /** Trazabilidad: expone el historial completo sin necesidad de mirar la base de datos. */
+  public List<CambioEstadoDonacion> obtenerHistorialDeEstados(String donacionID) {
+    return buscarDonacion(donacionID).getHistorialEstados();
+  }
+
   @Override
   public DonacionDTO cambiarEstadoDeDonacion(String donacionID, EstadoDonacionEnum estado)
       throws NoSuchElementException {
-    Donacion donacion =
-        donacionesRepository
-            .findById(donacionID)
-            .orElseThrow(() -> new NoSuchElementException("No existe la donacion a modificar"));
+    Donacion donacion = buscarDonacion(donacionID);
 
-    donacion.cambiarEstado(estado, "Cambio de estado reportado por Logistica/Sistema");
+    donacion.cambiarEstado(
+        donacionesMapper.toModel(estado), "Cambio de estado reportado por Logistica/Sistema");
     donacionesRepository.save(donacion);
 
     if (EstadoDonacionEnum.ACEPTADA.equals(estado)) {
@@ -206,21 +271,22 @@ public class Fachada implements FachadaDonaciones {
       throws NoSuchElementException {
     List<Donacion> donacionesDelDonador = donacionesRepository.buscarPorDonador(donadorID);
 
-    if (donacionesDelDonador.isEmpty()) {
-      DonadorDTO donador;
-      try {
-        donador = fachadaDonadoresYEntidades.buscarDonadorPorID(donadorID);
-      } catch (Exception e) {
-        throw new RuntimeException("El donador indicado no existe", e);
-      }
+    // Sin donaciones no se puede distinguir "el donador no dono nunca" de "el donador no existe",
+    // asi que se confirma contra Donadores y Entidades antes de devolver una lista vacia.
+    if (donacionesDelDonador.isEmpty() && fachadaDonadoresYEntidades != null) {
+      DonadorDTO donador =
+          medirIntegracion(
+              "donadores",
+              "buscarDonadorPorID",
+              () -> fachadaDonadoresYEntidades.buscarDonadorPorID(donadorID));
       if (donador == null) {
-        throw new RuntimeException("El donador indicado no existe");
+        throw new NoSuchElementException("El donador " + donadorID + " no existe");
       }
-      return Collections.emptyList();
+      return List.of();
     }
 
     return donacionesDelDonador.stream()
-        .filter(d -> !d.getHistorialEstados().get(0).getFechaCambio().toLocalDate().isBefore(fecha))
+        .filter(d -> fecha == null || !d.getFechaIngreso().isBefore(fecha))
         .map(donacionesMapper::toDTO)
         .collect(Collectors.toList());
   }
@@ -228,34 +294,28 @@ public class Fachada implements FachadaDonaciones {
   @Override
   public DonacionDTO registrarQuejaEnDonacion(String donacionID, String descripcion) {
     if (donacionID == null) {
-      throw new RuntimeException("El ID de la donacion no puede ser nulo");
+      throw new IllegalArgumentException("El ID de la donacion no puede ser nulo");
     }
 
-    Donacion donacion =
-        donacionesRepository
-            .findById(donacionID)
-            .orElseThrow(
-                () -> new RuntimeException("No se encontro la donacion para registrar la queja"));
+    Donacion donacion = buscarDonacion(donacionID);
 
-    if (!EstadoDonacionEnum.ACEPTADA.equals(donacion.getEstadoActual())) {
-      throw new RuntimeException("Solo se puede registrar una queja sobre una donacion aceptada");
+    if (!EstadoDonacion.ACEPTADA.equals(donacion.getEstadoActual())) {
+      throw new IllegalArgumentException(
+          "Solo se puede registrar una queja sobre una donacion aceptada");
     }
 
-    try {
-      QuejaDTO quejaDTO =
-          new QuejaDTO(
-              null, donacion.getId(), donacion.getDonadorId(), LocalDate.now(), descripcion);
-      fachadaDonadoresYEntidades.agregarQueja(quejaDTO);
-    } catch (Exception e) {
-      incrementarMetrica("donatrack.donaciones.integracion.donadores.errores");
-      throw new RuntimeException("No se pudo registrar la queja en el sistema de Donadores", e);
-    }
+    QuejaDTO quejaDTO =
+        new QuejaDTO(null, donacion.getId(), donacion.getDonadorId(), LocalDate.now(), descripcion);
+    medirIntegracion(
+        "donadores", "agregarQueja", () -> fachadaDonadoresYEntidades.agregarQueja(quejaDTO));
 
-    donacion.cambiarEstado(EstadoDonacionEnum.CONQUEJA, descripcion);
+    donacion.cambiarEstado(EstadoDonacion.CONQUEJA, descripcion);
     donacionesRepository.save(donacion);
 
     incrementarMetrica("donatrack.donaciones.quejas.registradas");
 
+    // La queja puede hacerle perder el progreso de una mision al donador (Entrega 4). Si Incentivos
+    // no responde no se revierte la queja: es una notificacion, no parte de la transaccion.
     if (fachadaIncentivos != null) {
       try {
         fachadaIncentivos.procesarDonador(donacion.getDonadorId());
@@ -267,40 +327,122 @@ public class Fachada implements FachadaDonaciones {
     return donacionesMapper.toDTO(donacion);
   }
 
+  // -------------------------------------------------------------- productos
+
   @Override
   public ProductoDTO agregarProducto(ProductoDTO productoDTO) {
+    return agregarProducto(productoDTO, null);
+  }
+
+  /**
+   * Alta de producto indicando la subcategoria, que es la unidad minima de asignacion. El
+   * {@code ProductoDTO} de la catedra no tiene ese campo, por eso viaja aparte.
+   */
+  public ProductoDTO agregarProducto(ProductoDTO productoDTO, String subcategoriaID) {
     if (productoDTO == null) {
-      throw new RuntimeException("El producto no puede ser nulo");
+      throw new IllegalArgumentException("El producto no puede ser nulo");
     }
     if (productoDTO.id() != null && productosRepository.findById(productoDTO.id()).isPresent()) {
-      throw new RuntimeException("El producto ya existe en el sistema");
+      throw new IllegalArgumentException("El producto ya existe en el sistema");
     }
 
-    Identificador identificador =
-        identificadoresRepository
-            .findById(productoDTO.identificadorID())
-            .orElseThrow(() -> new NoSuchElementException("No existe el identificador indicado"));
-    if (productoDTO.categoriaID() != null && !productoDTO.categoriaID().isBlank()) {
-      categoriasRepository
-          .findById(productoDTO.categoriaID())
-          .orElseThrow(() -> new NoSuchElementException("No existe la categoria indicada"));
-    }
+    Identificador identificador = buscarIdentificadorOpcional(productoDTO.identificadorID());
+    validarCategoriaYSubcategoria(productoDTO.categoriaID(), subcategoriaID);
 
-    Producto producto = productoMapper.toModel(productoDTO, identificador);
+    Producto producto = productoMapper.toModel(productoDTO, subcategoriaID, identificador);
+    producto.setId(generadorDeIds.siguiente("producto"));
     Producto guardado = productosRepository.save(producto);
 
     incrementarMetrica("donatrack.donaciones.productos.registrados");
     return productoMapper.toDTO(guardado);
   }
 
+  /** Modificacion de producto: revalida el identificador porque el nombre pudo cambiar. */
+  public ProductoDTO modificarProducto(
+      String productoID, ProductoDTO productoDTO, String subcategoriaID) {
+    Producto producto = buscarProducto(productoID);
+
+    Identificador identificador = buscarIdentificadorOpcional(productoDTO.identificadorID());
+    validarCategoriaYSubcategoria(productoDTO.categoriaID(), subcategoriaID);
+
+    producto.modificar(
+        productoDTO.nombre(),
+        productoDTO.descripcion(),
+        productoDTO.categoriaID(),
+        subcategoriaID,
+        identificador);
+
+    return productoMapper.toDTO(productosRepository.save(producto));
+  }
+
+  public void eliminarProducto(String productoID) {
+    Producto producto = buscarProducto(productoID);
+
+    List<Donacion> donaciones = donacionesRepository.buscarPorProducto(producto.getId());
+    if (!donaciones.isEmpty()) {
+      throw new RecursoEnUsoException(
+          "No se puede eliminar el producto: tiene " + donaciones.size() + " donacion(es) asociada(s)");
+    }
+
+    productosRepository.deleteById(producto.getId());
+    incrementarMetrica("donatrack.donaciones.productos.eliminados");
+  }
+
+  /** El identificador es opcional: un producto puede no tener codigo de barras ni QR. */
+  private Identificador buscarIdentificadorOpcional(String identificadorID) {
+    if (identificadorID == null || identificadorID.isBlank()) {
+      return null;
+    }
+    return identificadoresRepository
+        .findById(identificadorID)
+        .orElseThrow(() -> new NoSuchElementException("No existe el identificador indicado"));
+  }
+
+  /**
+   * Categoria y subcategoria tienen que existir previamente: no se crean en tiempo de ejecucion. Y
+   * la subcategoria tiene que colgar efectivamente de la categoria declarada.
+   */
+  private void validarCategoriaYSubcategoria(String categoriaID, String subcategoriaID) {
+    Categoria categoria = null;
+    if (categoriaID != null && !categoriaID.isBlank()) {
+      categoria =
+          categoriasRepository
+              .findById(categoriaID)
+              .orElseThrow(() -> new NoSuchElementException("No existe la categoria indicada"));
+    }
+
+    if (subcategoriaID == null || subcategoriaID.isBlank()) {
+      return;
+    }
+
+    Categoria subcategoria =
+        categoriasRepository
+            .findById(subcategoriaID)
+            .orElseThrow(() -> new NoSuchElementException("No existe la subcategoria indicada"));
+
+    if (!subcategoria.esSubcategoria()) {
+      throw new IllegalArgumentException(
+          "'" + subcategoria.getNombre() + "' es una categoria raiz, no una subcategoria");
+    }
+    if (categoria != null && !subcategoria.getCategoriaPadreId().equals(categoria.getId())) {
+      throw new IllegalArgumentException(
+          "La subcategoria '"
+              + subcategoria.getNombre()
+              + "' no pertenece a la categoria '"
+              + categoria.getNombre()
+              + "'");
+    }
+  }
+
   @Override
   public ProductoDTO buscarProductoPorID(String productoID) throws NoSuchElementException {
-    Producto producto =
-        productosRepository
-            .findById(productoID)
-            .orElseThrow(() -> new NoSuchElementException("No existe un producto con ese ID"));
+    return productoMapper.toDTO(buscarProducto(productoID));
+  }
 
-    return productoMapper.toDTO(producto);
+  public Producto buscarProducto(String productoID) {
+    return productosRepository
+        .findById(productoID)
+        .orElseThrow(() -> new NoSuchElementException("No existe un producto con ese ID"));
   }
 
   public List<ProductoDTO> listarProductos() {
@@ -309,32 +451,69 @@ public class Fachada implements FachadaDonaciones {
         .collect(Collectors.toList());
   }
 
+  // --------------------------------------------------------- identificadores
+
   @Override
   public IdentificadorDTO agregarIdentificador(IdentificadorDTO identificadorDTO) {
     if (identificadorDTO == null) {
-      throw new RuntimeException("El identificador no puede ser nulo");
+      throw new IllegalArgumentException("El identificador no puede ser nulo");
     }
     if (identificadorDTO.id() != null
         && identificadoresRepository.findById(identificadorDTO.id()).isPresent()) {
-      throw new RuntimeException("El identificador ya existe en el sistema");
+      throw new IllegalArgumentException("El identificador ya existe en el sistema");
     }
 
     Identificador identificador = identificadorMapper.toModel(identificadorDTO);
+    identificador.setId(generadorDeIds.siguiente("identificador"));
     Identificador guardado = identificadoresRepository.save(identificador);
 
     incrementarMetrica("donatrack.donaciones.identificadores.registrados");
     return identificadorMapper.toDTO(guardado);
   }
 
+  public IdentificadorDTO modificarIdentificador(
+      String identificadorID, IdentificadorDTO identificadorDTO) {
+    Identificador identificador = buscarIdentificador(identificadorID);
+
+    identificador.modificar(
+        identificadorMapper.toModel(identificadorDTO.tipo()), identificadorDTO.descripcion());
+
+    // Cambiar el tipo puede invalidar productos que ya lo usan.
+    List<Producto> productos = productosRepository.buscarPorIdentificador(identificador.getId());
+    for (Producto producto : productos) {
+      if (!identificador.esValidoPara(producto.getNombre(), producto.getDescripcion())) {
+        throw new RecursoEnUsoException(
+            "El producto '"
+                + producto.getNombre()
+                + "' dejaria de cumplir la validacion del identificador");
+      }
+    }
+
+    return identificadorMapper.toDTO(identificadoresRepository.save(identificador));
+  }
+
+  public void eliminarIdentificador(String identificadorID) {
+    Identificador identificador = buscarIdentificador(identificadorID);
+
+    List<Producto> productos = productosRepository.buscarPorIdentificador(identificador.getId());
+    if (!productos.isEmpty()) {
+      throw new RecursoEnUsoException(
+          "No se puede eliminar el identificador: lo usan " + productos.size() + " producto(s)");
+    }
+
+    identificadoresRepository.deleteById(identificador.getId());
+  }
+
   @Override
   public IdentificadorDTO buscarIdentificadorPorID(String identificadorID)
       throws NoSuchElementException {
-    Identificador identificador =
-        identificadoresRepository
-            .findById(identificadorID)
-            .orElseThrow(() -> new NoSuchElementException("No existe un identificador con ese ID"));
+    return identificadorMapper.toDTO(buscarIdentificador(identificadorID));
+  }
 
-    return identificadorMapper.toDTO(identificador);
+  private Identificador buscarIdentificador(String identificadorID) {
+    return identificadoresRepository
+        .findById(identificadorID)
+        .orElseThrow(() -> new NoSuchElementException("No existe un identificador con ese ID"));
   }
 
   public List<IdentificadorDTO> listarIdentificadores() {
@@ -343,33 +522,81 @@ public class Fachada implements FachadaDonaciones {
         .collect(Collectors.toList());
   }
 
+  // ------------------------------------------------------------- categorias
+
   public CategoriaDTO agregarCategoria(CategoriaDTO categoriaDTO) {
+    return agregarCategoria(categoriaDTO, categoriaDTO == null ? null : categoriaDTO.subcategoriaID());
+  }
+
+  /**
+   * Alta de categoria. Si se indica {@code categoriaPadreID}, la categoria nueva es una
+   * subcategoria de aquella y pasa a ser una unidad de asignacion.
+   */
+  public CategoriaDTO agregarCategoria(CategoriaDTO categoriaDTO, String categoriaPadreID) {
     if (categoriaDTO == null) {
-      throw new RuntimeException("La categoria no puede ser nula");
+      throw new IllegalArgumentException("La categoria no puede ser nula");
     }
     if (categoriaDTO.id() != null && categoriasRepository.findById(categoriaDTO.id()).isPresent()) {
-      throw new RuntimeException("La categoria ya existe en el sistema");
-    }
-    if (categoriaDTO.subcategoriaID() != null
-        && !categoriaDTO.subcategoriaID().isBlank()
-        && categoriasRepository.findById(categoriaDTO.subcategoriaID()).isEmpty()) {
-      throw new RuntimeException("La subcategoria indicada no existe");
+      throw new IllegalArgumentException("La categoria ya existe en el sistema");
     }
 
     Categoria categoria = categoriaMapper.toModel(categoriaDTO);
+    categoria.setId(generadorDeIds.siguiente("categoria"));
+
+    if (categoriaPadreID != null && !categoriaPadreID.isBlank()) {
+      categoria.colgarDe(buscarCategoria(categoriaPadreID));
+    }
+
     Categoria guardada = categoriasRepository.save(categoria);
 
     incrementarMetrica("donatrack.donaciones.categorias.registradas");
     return categoriaMapper.toDTO(guardada);
   }
 
-  public CategoriaDTO buscarCategoriaPorID(String categoriaID) throws NoSuchElementException {
-    Categoria categoria =
-        categoriasRepository
-            .findById(categoriaID)
-            .orElseThrow(() -> new NoSuchElementException("No existe una categoria con ese ID"));
+  public CategoriaDTO modificarCategoria(String categoriaID, CategoriaDTO categoriaDTO) {
+    Categoria categoria = buscarCategoria(categoriaID);
+    categoria.modificar(categoriaDTO.nombre(), categoriaDTO.descripcion());
+    return categoriaMapper.toDTO(categoriasRepository.save(categoria));
+  }
 
-    return categoriaMapper.toDTO(categoria);
+  public void eliminarCategoria(String categoriaID) {
+    Categoria categoria = buscarCategoria(categoriaID);
+
+    List<Categoria> subcategorias = categoriasRepository.buscarSubcategoriasDe(categoria.getId());
+    if (!subcategorias.isEmpty()) {
+      throw new RecursoEnUsoException(
+          "No se puede eliminar la categoria: tiene " + subcategorias.size() + " subcategoria(s)");
+    }
+
+    List<Producto> productos = productosRepository.buscarPorCategoria(categoria.getId());
+    if (!productos.isEmpty()) {
+      throw new RecursoEnUsoException(
+          "No se puede eliminar la categoria: la usan " + productos.size() + " producto(s)");
+    }
+
+    categoriasRepository.deleteById(categoria.getId());
+  }
+
+  public CategoriaDTO buscarCategoriaPorID(String categoriaID) throws NoSuchElementException {
+    return categoriaMapper.toDTO(buscarCategoria(categoriaID));
+  }
+
+  public Categoria verCategoria(String categoriaID) {
+    return buscarCategoria(categoriaID);
+  }
+
+  public List<Categoria> listarCategoriasDelDominio() {
+    return categoriasRepository.findAll();
+  }
+
+  public List<Categoria> listarSubcategoriasDelDominio(String categoriaID) {
+    return categoriasRepository.buscarSubcategoriasDe(buscarCategoria(categoriaID).getId());
+  }
+
+  private Categoria buscarCategoria(String categoriaID) {
+    return categoriasRepository
+        .findById(categoriaID)
+        .orElseThrow(() -> new NoSuchElementException("No existe una categoria con ese ID"));
   }
 
   public List<CategoriaDTO> listarCategorias() {
@@ -378,10 +605,24 @@ public class Fachada implements FachadaDonaciones {
         .collect(Collectors.toList());
   }
 
+  /** Subcategorias de una categoria: las unidades minimas de asignacion que la componen. */
+  public List<CategoriaDTO> listarSubcategoriasDe(String categoriaID) {
+    Categoria categoria = buscarCategoria(categoriaID);
+    return categoriasRepository.buscarSubcategoriasDe(categoria.getId()).stream()
+        .map(categoriaMapper::toDTO)
+        .collect(Collectors.toList());
+  }
+
+  // ----------------------------------------------------------------- admin
+
   public void limpiarDatos() {
     donacionesRepository.deleteAll();
     productosRepository.deleteAll();
     identificadoresRepository.deleteAll();
     categoriasRepository.deleteAll();
+  }
+
+  public Producto verProducto(String productoID) {
+    return buscarProducto(productoID);
   }
 }
